--- a/TODOAPP/Base.lproj/Main.storyboard
+++ b/TODOAPP/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                     <navigationItem key="navigationItem" title="Title" id="EGr-6u-Ohs">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ykB-Fq-uoT">
                             <connections>
-                                <segue destination="Vqn-Zt-99w" kind="presentation" identifier="DetailedTaskScreenSegue" id="shs-U4-sGc"/>
+                                <segue destination="Vqn-Zt-99w" kind="show" identifier="DetailedTaskScreenSegue" id="shs-U4-sGc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -137,7 +137,7 @@
                                 <state key="normal" title="Add"/>
                                 <connections>
                                     <action selector="addTaskButtonClicked:" destination="Vqn-Zt-99w" eventType="touchUpInside" id="jMq-e1-ruw"/>
-                                    <segue destination="AQh-sG-deg" kind="showDetail" identifier="CreateTaskSegue" animates="NO" id="o5m-9U-pxE"/>
+                                    <segue destination="AQh-sG-deg" kind="show" identifier="CreateTaskSegue" animates="NO" id="o5m-9U-pxE"/>
                                 </connections>
                             </button>
                         </subviews>
